fix(ui): hide scrollbars on side menu and hover jump navigator #5945
Closes #5945

--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -61,6 +61,12 @@
         overflow-y: auto;
         margin-bottom: 0px;
         padding-top: 4px;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+          width: 0;
+          height: 0;
+        }
       }
 
       .the-traffic {
